--- a/Caronae/User/Login/Login.storyboard
+++ b/Caronae/User/Login/Login.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Token View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="TokenScreen" id="BYZ-38-t0r" customClass="TokenViewController" customModule="Caronae" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TokenScreen" id="BYZ-38-t0r" customClass="LoginViewController" customModule="Caronae" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
