--- a/Caronae/User/Login/Login.storyboard
+++ b/Caronae/User/Login/Login.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,17 +20,17 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mVq-3z-13h" userLabel="Content">
-                                <rect key="frame" x="0.0" y="113" width="375" height="441"/>
+                                <rect key="frame" x="0.0" y="185.66666666666663" width="375" height="441"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoLarge" translatesAutoresizingMaskIntoConstraints="NO" id="TQy-c2-48w">
                                         <rect key="frame" x="85" y="28" width="205" height="53"/>
                                     </imageView>
                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pyv-Ne-S5g">
-                                        <rect key="frame" x="40" y="161" width="295" height="121"/>
+                                        <rect key="frame" x="40" y="161.00000000000003" width="295" height="120.66666666666666"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Olá :)">
                                                 <attributes>
@@ -58,8 +59,22 @@ Cgo
                                         </attributedString>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AuthBackground-left" translatesAutoresizingMaskIntoConstraints="NO" id="0Sk-82-6eP">
+                                        <rect key="frame" x="-0.6666666666666643" y="393.33333333333337" width="117.66666666666666" height="212"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="117" id="58K-XA-1SP"/>
+                                            <constraint firstAttribute="height" constant="212" id="did-FW-57g"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AuthBackground-right" translatesAutoresizingMaskIntoConstraints="NO" id="wZb-dT-F8o">
+                                        <rect key="frame" x="291" y="393.33333333333337" width="84" height="212"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="212" id="2S5-pp-dap"/>
+                                            <constraint firstAttribute="width" constant="84" id="pWM-uE-Lh6"/>
+                                        </constraints>
+                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FaG-EK-E7P" customClass="CaronaeGradientButton" customModule="Caronae" customModuleProvider="target">
-                                        <rect key="frame" x="57.5" y="381" width="260" height="50"/>
+                                        <rect key="frame" x="58" y="381" width="260" height="50"/>
                                         <color key="backgroundColor" red="0.89019608500000003" green="0.14509804549999999" blue="0.1647058874" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="260" id="CbZ-wH-A9X"/>
@@ -75,13 +90,19 @@ Cgo
                                     </button>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="wZb-dT-F8o" secondAttribute="trailing" id="1bf-NJ-mwl"/>
+                                    <constraint firstItem="wZb-dT-F8o" firstAttribute="leading" secondItem="FaG-EK-E7P" secondAttribute="trailing" priority="990" constant="-27" id="1ka-Hg-hCK"/>
+                                    <constraint firstItem="0Sk-82-6eP" firstAttribute="leading" relation="lessThanOrEqual" secondItem="mVq-3z-13h" secondAttribute="leading" id="2DN-Vs-a1a"/>
                                     <constraint firstItem="TQy-c2-48w" firstAttribute="centerX" secondItem="mVq-3z-13h" secondAttribute="centerX" id="4Dg-SA-AvI"/>
+                                    <constraint firstItem="0Sk-82-6eP" firstAttribute="trailing" secondItem="FaG-EK-E7P" secondAttribute="leading" priority="990" constant="58.666671752929688" id="6Y2-qf-P6E"/>
                                     <constraint firstItem="pyv-Ne-S5g" firstAttribute="leading" secondItem="mVq-3z-13h" secondAttribute="leading" constant="40" id="Cfn-lO-D6b"/>
                                     <constraint firstAttribute="height" constant="441" id="HAb-qH-KcO"/>
                                     <constraint firstAttribute="bottom" secondItem="FaG-EK-E7P" secondAttribute="bottom" constant="10" id="IRL-zM-Glm"/>
                                     <constraint firstItem="TQy-c2-48w" firstAttribute="top" secondItem="mVq-3z-13h" secondAttribute="topMargin" constant="20" id="UOn-dS-Rcv"/>
                                     <constraint firstItem="pyv-Ne-S5g" firstAttribute="centerX" secondItem="mVq-3z-13h" secondAttribute="centerX" id="Vao-C4-n5v"/>
+                                    <constraint firstItem="wZb-dT-F8o" firstAttribute="centerY" secondItem="0Sk-82-6eP" secondAttribute="centerY" id="Zuf-LW-7bZ"/>
                                     <constraint firstItem="pyv-Ne-S5g" firstAttribute="top" secondItem="TQy-c2-48w" secondAttribute="bottom" constant="80" id="ke0-Dc-38b"/>
+                                    <constraint firstItem="0Sk-82-6eP" firstAttribute="top" secondItem="FaG-EK-E7P" secondAttribute="bottom" constant="-37" id="uBZ-qN-jPm"/>
                                     <constraint firstItem="FaG-EK-E7P" firstAttribute="centerX" secondItem="mVq-3z-13h" secondAttribute="centerX" id="ygq-C3-16u"/>
                                 </constraints>
                                 <variation key="default">
@@ -137,6 +158,8 @@ Cgo
         </scene>
     </scenes>
     <resources>
+        <image name="AuthBackground-left" width="117" height="211"/>
+        <image name="AuthBackground-right" width="84" height="211"/>
         <image name="InstitutionIcon" width="25" height="25"/>
         <image name="LogoLarge" width="205" height="53"/>
     </resources>
