--- a/Caronae/Ride/RideListController.xib
+++ b/Caronae/Ride/RideListController.xib
@@ -131,7 +131,7 @@
                 <constraint firstItem="6Ac-hY-QKJ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="UMa-bL-jCs"/>
                 <constraint firstAttribute="trailing" secondItem="6Ac-hY-QKJ" secondAttribute="trailing" id="ayK-AH-gqw"/>
                 <constraint firstAttribute="trailing" secondItem="0Ip-RW-iit" secondAttribute="trailing" id="iFw-KO-OxI"/>
-                <constraint firstItem="0Ip-RW-iit" firstAttribute="top" secondItem="JzG-F6-RYf" secondAttribute="top" id="rwo-Fq-4GM"/>
+                <constraint firstItem="0Ip-RW-iit" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" priority="990" constant="64" id="rwo-Fq-4GM"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
